Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36508

Accelerated composited layers does not render correctly in HiDPI mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.0
    • 5.2.0
    • WebKit
    • None
    • 247ab7f706ace2af766daa7051bf25bd3c399169 5e64d7e2158a8ff1cb4a7e5dedb100f0cf123c5f

      Mac: When a webpage has something that triggers hardware acceleration then it does not display at the right size on a retina display. In the example attached two divs of 250x250 are displayed. On a normal display both are displayed correctly, but on a retina display the one on the left (which has -webkit:scale3d(1,1,1) set to trigger the hardware acceleration aspect).

      One thing to note in the example is that a QGLWidget is used as a QGraphicsView viewport, commenting out this line still shows a problem but in a different way, but it seems possible that the QGraphicsView is also an influence in this.

        1. example.cpp
          1 kB
          Andy Shaw
        2. index.html
          1 kB
          Andy Shaw
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes