Fix transform of accelerated layers on hiDPI painters

A mismatch of reading combinedTransform but setting worldTransform
means that the pattern of only storing and restoring the transform
when temporarily overriding it, causes the hiDPI transform that
combinedTransform contains to be applied multiple times.

Task-number: QTBUG-36508
Change-Id: I512f0752016f55935595ef259913660b4ee78ae7
Reviewed-by: Jocelyn Turcotte <jocelyn.turcotte@digia.com>